objects/Account_Message__c.object
<CustomObject>
    <description>Information about new and changed accounts to be sent via outbound message.</description>
    <fields>
        <fullName>ACCT_ADDRESS_DUNS_NUM__c</fullName>
        <description>ACCT_ADDRESS_DUNS_NUM</description>
        <inlineHelpText>ACCT_ADDRESS_DUNS_NUM</inlineHelpText>
        <label>ACCT_ADDRESS_DUNS_NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ADD_EDI_FLAG__c</fullName>
        <description>ACCT_ADD_EDI_FLAG</description>
        <inlineHelpText>ACCT_ADD_EDI_FLAG</inlineHelpText>
        <label>ACCT_ADD_EDI_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ADD_INTERNET_FLAG__c</fullName>
        <description>ACCT_ADD_INTERNET_FLAG</description>
        <inlineHelpText>ACCT_ADD_INTERNET_FLAG</inlineHelpText>
        <label>ACCT_ADD_INTERNET_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ADD_SHIPTO_FLAG__c</fullName>
        <description>ACCT_ADD_SHIPTO_FLAG</description>
        <inlineHelpText>ACCT_ADD_SHIPTO_FLAG</inlineHelpText>
        <label>ACCT_ADD_SHIPTO_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ADD_SPC_FLAG__c</fullName>
        <description>ACCT_ADD_SPC_FLAG</description>
        <inlineHelpText>ACCT_ADD_SPC_FLAG</inlineHelpText>
        <label>ACCT_ADD_SPC_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ADD_TAX_EXEMPT_FLAG__c</fullName>
        <description>ACCT_ADD_TAX_EXEMPT_FLAG</description>
        <inlineHelpText>ACCT_ADD_TAX_EXEMPT_FLAG</inlineHelpText>
        <label>ACCT_ADD_TAX_EXEMPT_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_AUTO_FAX_FLAG__c</fullName>
        <label>ACCT_AUTO_FAX_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_A_FAX_SHIP_CONFIRM__c</fullName>
        <label>ACCT_A_FAX_SHIP_CONFIRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BACK_ORDER_ALLOW__c</fullName>
        <description>ACCT_BACK_ORDER_ALLOW</description>
        <inlineHelpText>ACCT_BACK_ORDER_ALLOW</inlineHelpText>
        <label>ACCT_BACK_ORDER_ALLOW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILLTO_NAME__c</fullName>
        <description>ACCT_BT_BILLTO_NAME</description>
        <inlineHelpText>ACCT_BT_BILLTO_NAME</inlineHelpText>
        <label>ACCT_BT_BILLTO_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILLTO_ORACLE_PARTY_SITE_ID__c</fullName>
        <description>ACCT_BT_BILLTO_ORACLE_PARTY_SITE_ID</description>
        <inlineHelpText>ACCT_BT_BILLTO_ORACLE_PARTY_SITE_ID</inlineHelpText>
        <label>ACCT_BT_BILLTO_ORACLE_PARTY_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_ADD1__c</fullName>
        <description>ACCT_BT_BILL_ADD1</description>
        <inlineHelpText>ACCT_BT_BILL_ADD1</inlineHelpText>
        <label>ACCT_BT_BILL_ADD1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_ADD2__c</fullName>
        <description>ACCT_BT_BILL_ADD2</description>
        <inlineHelpText>ACCT_BT_BILL_ADD2</inlineHelpText>
        <label>ACCT_BT_BILL_ADD2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_CITY__c</fullName>
        <description>ACCT_BT_BILL_CITY</description>
        <inlineHelpText>ACCT_BT_BILL_CITY</inlineHelpText>
        <label>ACCT_BT_BILL_CITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_COUNTRY__c</fullName>
        <description>ACCT_BT_BILL_COUNTRY</description>
        <inlineHelpText>ACCT_BT_BILL_COUNTRY</inlineHelpText>
        <label>ACCT_BT_BILL_COUNTRY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_STATE__c</fullName>
        <description>ACCT_BT_BILL_STATE</description>
        <inlineHelpText>ACCT_BT_BILL_STATE</inlineHelpText>
        <label>ACCT_BT_BILL_STATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_BILL_ZIP__c</fullName>
        <description>ACCT_BT_BILL_ZIP</description>
        <inlineHelpText>ACCT_BT_BILL_ZIP</inlineHelpText>
        <label>ACCT_BT_BILL_ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_BT_SFDC_BILLTO_ID__c</fullName>
        <description>ACCT_BT_SFDC_BILLTO_ID</description>
        <inlineHelpText>ACCT_BT_SFDC_BILLTO_ID</inlineHelpText>
        <label>ACCT_BT_SFDC_BILLTO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_CPD_FLAG__c</fullName>
        <description>ACCT_CPD_FLAG</description>
        <inlineHelpText>ACCT_CPD_FLAG</inlineHelpText>
        <label>ACCT_CPD_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_CUSTOMER_DUNS_NUM__c</fullName>
        <description>ACCT_CUSTOMER_DUNS_NUM</description>
        <inlineHelpText>ACCT_CUSTOMER_DUNS_NUM</inlineHelpText>
        <label>ACCT_CUSTOMER_DUNS_NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_CUSTOMER_NAME__c</fullName>
        <description>ACCT_CUSTOMER_NAME</description>
        <inlineHelpText>ACCT_CUSTOMER_NAME</inlineHelpText>
        <label>ACCT_CUSTOMER_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_CUST_SUBTYPE__c</fullName>
        <description>ACCT_CUST_SUBTYPE</description>
        <inlineHelpText>ACCT_CUST_SUBTYPE</inlineHelpText>
        <label>ACCT_CUST_SUBTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_CUST_TYPE__c</fullName>
        <description>ACCT_CUST_TYPE</description>
        <inlineHelpText>ACCT_CUST_TYPE</inlineHelpText>
        <label>ACCT_CUST_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DELIVERY_CHARGE_CODE__c</fullName>
        <description>ACCT_DELIVERY_CHARGE_CODE</description>
        <inlineHelpText>ACCT_DELIVERY_CHARGE_CODE</inlineHelpText>
        <label>ACCT_DELIVERY_CHARGE_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DEPT_FLAG__c</fullName>
        <description>ACCT_DEPT_FLAG</description>
        <inlineHelpText>ACCT_DEPT_FLAG</inlineHelpText>
        <label>ACCT_DEPT_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DESK_FLAG__c</fullName>
        <description>ACCT_DESK_FLAG</description>
        <inlineHelpText>ACCT_DESK_FLAG</inlineHelpText>
        <label>ACCT_DESK_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DISPLAY_BACKORDERS__c</fullName>
        <description>ACCT_DISPLAY_BACKORDERS</description>
        <inlineHelpText>ACCT_DISPLAY_BACKORDERS</inlineHelpText>
        <label>ACCT_DISPLAY_BACKORDERS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DISPLAY_PAYMETHOD__c</fullName>
        <description>ACCT_DISPLAY_PAYMETHOD</description>
        <inlineHelpText>ACCT_DISPLAY_PAYMETHOD</inlineHelpText>
        <label>ACCT_DISPLAY_PAYMETHOD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DISPLAY_PRICES__c</fullName>
        <description>ACCT_DISPLAY_PRICES</description>
        <inlineHelpText>ACCT_DISPLAY_PRICES</inlineHelpText>
        <label>ACCT_DISPLAY_PRICES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DISPLAY_PURCHASE_ORDER__c</fullName>
        <description>ACCT_DISPLAY_PURCHASE_ORDER</description>
        <inlineHelpText>ACCT_DISPLAY_PURCHASE_ORDER</inlineHelpText>
        <label>ACCT_DISPLAY_PURCHASE_ORDER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_DLV_DOC_TYPE__c</fullName>
        <description>ACCT_DLV_DOC_TYPE</description>
        <inlineHelpText>ACCT_DLV_DOC_TYPE</inlineHelpText>
        <label>ACCT_DLV_DOC_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_FURNITURE_DELIVERY__c</fullName>
        <description>ACCT_FURNITURE_DELIVERY</description>
        <inlineHelpText>ACCT_FURNITURE_DELIVERY</inlineHelpText>
        <label>ACCT_FURNITURE_DELIVERY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_GPFLOOR_PERCENT__c</fullName>
        <description>ACCT_GPFLOOR_PERCENT</description>
        <inlineHelpText>ACCT_GPFLOOR_PERCENT</inlineHelpText>
        <label>ACCT_GPFLOOR_PERCENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_HEDBERG_FLAG__c</fullName>
        <defaultValue>&quot;E&quot;</defaultValue>
        <description>Hedberg Flag</description>
        <label>Hedberg Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_DUNS_ID__c</fullName>
        <description>ACCT_ID_DUNS_ID</description>
        <inlineHelpText>ACCT_ID_DUNS_ID</inlineHelpText>
        <label>ACCT_ID_DUNS_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_EMPLOYER_TIN_ID__c</fullName>
        <description>ACCT_ID_EMPLOYER_TIN_ID</description>
        <inlineHelpText>ACCT_ID_EMPLOYER_TIN_ID</inlineHelpText>
        <label>ACCT_ID_EMPLOYER_TIN_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_GRANDPARENT_ID__c</fullName>
        <description>ACCT_ID_GRANDPARENT_ID</description>
        <inlineHelpText>ACCT_ID_GRANDPARENT_ID</inlineHelpText>
        <label>ACCT_ID_GRANDPARENT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_ORACLE_PARTY_ID__c</fullName>
        <description>ACCT_ID_ORACLE_PARTY_ID</description>
        <inlineHelpText>ACCT_ID_ORACLE_PARTY_ID</inlineHelpText>
        <label>ACCT_ID_ORACLE_PARTY_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_PARENT_ID__c</fullName>
        <description>ACCT_ID_PARENT_ID</description>
        <inlineHelpText>ACCT_ID_PARENT_ID</inlineHelpText>
        <label>ACCT_ID_PARENT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_PROSPECT_ID__c</fullName>
        <description>ACCT_ID_PROSPECT_ID</description>
        <inlineHelpText>ACCT_ID_PROSPECT_ID</inlineHelpText>
        <label>ACCT_ID_PROSPECT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_REP_ID__c</fullName>
        <description>ACCT_ID_REP_ID</description>
        <inlineHelpText>ACCT_ID_REP_ID</inlineHelpText>
        <label>ACCT_ID_REP_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_REQUEST_ID__c</fullName>
        <description>ACCT_ID_REQUEST_ID</description>
        <inlineHelpText>ACCT_ID_REQUEST_ID</inlineHelpText>
        <label>ACCT_ID_REQUEST_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ID_SFDC_ACCOUNT_ID__c</fullName>
        <description>ACCT_ID_SFDC_ACCOUNT_ID</description>
        <inlineHelpText>ACCT_ID_SFDC_ACCOUNT_ID</inlineHelpText>
        <label>ACCT_ID_SFDC_ACCOUNT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ITEM_XREF__c</fullName>
        <description>ACCT_ITEM_XREF</description>
        <inlineHelpText>ACCT_ITEM_XREF</inlineHelpText>
        <label>ACCT_ITEM_XREF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_MIN_ORDER_AMOUNT__c</fullName>
        <description>ACCT_MIN_ORDER_AMOUNT</description>
        <inlineHelpText>ACCT_MIN_ORDER_AMOUNT</inlineHelpText>
        <label>ACCT_MIN_ORDER_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_OFF_CNTRCT_CODE__c</fullName>
        <description>ACCT_OFF_CNTRCT_CODE</description>
        <inlineHelpText>ACCT_OFF_CNTRCT_CODE</inlineHelpText>
        <label>ACCT_OFF_CNTRCT_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_OFF_CNTRCT_PERCENT__c</fullName>
        <description>ACCT_OFF_CNTRCT_PERCENT</description>
        <inlineHelpText>ACCT_OFF_CNTRCT_PERCENT</inlineHelpText>
        <label>ACCT_OFF_CNTRCT_PERCENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_OFF_WHSALE_CODE__c</fullName>
        <description>ACCT_OFF_WHSALE_CODE</description>
        <inlineHelpText>ACCT_OFF_WHSALE_CODE</inlineHelpText>
        <label>ACCT_OFF_WHSALE_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_OFF_WHSALE_PERCENT__c</fullName>
        <description>ACCT_OFF_WHSALE_PERCENT</description>
        <inlineHelpText>ACCT_OFF_WHSALE_PERCENT</inlineHelpText>
        <label>ACCT_OFF_WHSALE_PERCENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ORDER_MAX_AMOUNT__c</fullName>
        <description>ACCT_ORDER_MAX_AMOUNT</description>
        <inlineHelpText>ACCT_ORDER_MAX_AMOUNT</inlineHelpText>
        <label>ACCT_ORDER_MAX_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PAY_METHOD__c</fullName>
        <description>ACCT_PAY_METHOD</description>
        <inlineHelpText>ACCT_PAY_METHOD</inlineHelpText>
        <label>ACCT_PAY_METHOD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PO_FLAG__c</fullName>
        <description>ACCT_PO_FLAG</description>
        <inlineHelpText>ACCT_PO_FLAG</inlineHelpText>
        <label>ACCT_PO_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PRICE_PLAN__c</fullName>
        <description>ACCT_PRICE_PLAN</description>
        <inlineHelpText>ACCT_PRICE_PLAN</inlineHelpText>
        <label>ACCT_PRICE_PLAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PRINT_INV__c</fullName>
        <description>ACCT_PRINT_INV</description>
        <inlineHelpText>ACCT_PRINT_INV</inlineHelpText>
        <label>ACCT_PRINT_INV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PROSPECT_SOURCE__c</fullName>
        <description>ACCT_PROSPECT_SOURCE</description>
        <inlineHelpText>ACCT_PROSPECT_SOURCE</inlineHelpText>
        <label>ACCT_PROSPECT_SOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RELEASE_FLAG__c</fullName>
        <description>ACCT_RELEASE_FLAG</description>
        <inlineHelpText>ACCT_RELEASE_FLAG</inlineHelpText>
        <label>ACCT_RELEASE_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RENAMED_DEPT__c</fullName>
        <description>ACCT_RENAMED_DEPT</description>
        <inlineHelpText>ACCT_RENAMED_DEPT</inlineHelpText>
        <label>ACCT_RENAMED_DEPT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RENAMED_DSKTP__c</fullName>
        <description>ACCT_RENAMED_DSKTP</description>
        <inlineHelpText>ACCT_RENAMED_DSKTP</inlineHelpText>
        <label>ACCT_RENAMED_DSKTP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RENAMED_PO__c</fullName>
        <description>ACCT_RENAMED_PO</description>
        <inlineHelpText>ACCT_RENAMED_PO</inlineHelpText>
        <label>ACCT_RENAMED_PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RENAMED_RELEASE__c</fullName>
        <description>ACCT_RENAMED_RELEASE</description>
        <inlineHelpText>ACCT_RENAMED_RELEASE</inlineHelpText>
        <label>ACCT_RENAMED_RELEASE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_RENAME_PACKLIST__c</fullName>
        <description>ACCT_RENAME_PACKLIST</description>
        <inlineHelpText>ACCT_RENAME_PACKLIST</inlineHelpText>
        <label>ACCT_RENAME_PACKLIST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_REPORT_LOC__c</fullName>
        <description>ACCT_REPORT_LOC</description>
        <inlineHelpText>ACCT_REPORT_LOC</inlineHelpText>
        <label>ACCT_REPORT_LOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_REQUESTOR_NAME__c</fullName>
        <description>ACCT_REQUESTOR_NAME</description>
        <inlineHelpText>ACCT_REQUESTOR_NAME</inlineHelpText>
        <label>ACCT_REQUESTOR_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_REQUEST_TIMESTAMP__c</fullName>
        <description>ACCT_REQUEST_TIMESTAMP</description>
        <inlineHelpText>ACCT_REQUEST_TIMESTAMP</inlineHelpText>
        <label>ACCT_REQUEST_TIMESTAMP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_REVENUE_BAND__c</fullName>
        <description>ACCT_REVENUE_BAND</description>
        <inlineHelpText>ACCT_REVENUE_BAND</inlineHelpText>
        <label>ACCT_REVENUE_BAND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_SIC_CODE__c</fullName>
        <description>ACCT_SIC_CODE</description>
        <inlineHelpText>ACCT_SIC_CODE</inlineHelpText>
        <label>ACCT_SIC_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_SMALL_ORDER_DLV_FLAG__c</fullName>
        <description>ACCT_SMALL_ORDER_DLV_FLAG</description>
        <inlineHelpText>ACCT_SMALL_ORDER_DLV_FLAG</inlineHelpText>
        <label>ACCT_SMALL_ORDER_DLV_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SFDC_SHIPTO_ID__c</fullName>
        <description>ACCT_ST_SFDC_SHIPTO_ID</description>
        <inlineHelpText>ACCT_ST_SFDC_SHIPTO_ID</inlineHelpText>
        <label>ACCT_ST_SFDC_SHIPTO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIPTO_NAME__c</fullName>
        <description>ACCT_ST_SHIPTO_NAME</description>
        <inlineHelpText>ACCT_ST_SHIPTO_NAME</inlineHelpText>
        <label>ACCT_ST_SHIPTO_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIPTO_ORACLE_PARTY_SITE_ID__c</fullName>
        <description>ACCT_ST_SHIPTO_ORACLE_PARTY_SITE_ID</description>
        <inlineHelpText>ACCT_ST_SHIPTO_ORACLE_PARTY_SITE_ID</inlineHelpText>
        <label>ACCT_ST_SHIPTO_ORACLE_PARTY_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_ADD1__c</fullName>
        <description>ACCT_ST_SHIP_ADD1</description>
        <inlineHelpText>ACCT_ST_SHIP_ADD1</inlineHelpText>
        <label>ACCT_ST_SHIP_ADD1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_ADD2__c</fullName>
        <description>ACCT_ST_SHIP_ADD2</description>
        <inlineHelpText>ACCT_ST_SHIP_ADD2</inlineHelpText>
        <label>ACCT_ST_SHIP_ADD2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_CITY__c</fullName>
        <description>ACCT_ST_SHIP_CITY</description>
        <inlineHelpText>ACCT_ST_SHIP_CITY</inlineHelpText>
        <label>ACCT_ST_SHIP_CITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_COUNTRY__c</fullName>
        <description>ACCT_ST_SHIP_COUNTRY</description>
        <inlineHelpText>ACCT_ST_SHIP_COUNTRY</inlineHelpText>
        <label>ACCT_ST_SHIP_COUNTRY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_STATE__c</fullName>
        <description>ACCT_ST_SHIP_STATE</description>
        <inlineHelpText>ACCT_ST_SHIP_STATE</inlineHelpText>
        <label>ACCT_ST_SHIP_STATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_ST_SHIP_ZIP__c</fullName>
        <description>ACCT_ST_SHIP_ZIP</description>
        <inlineHelpText>ACCT_ST_SHIP_ZIP</inlineHelpText>
        <label>ACCT_ST_SHIP_ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_SUBSTITUTE_ALLOW__c</fullName>
        <description>ACCT_SUBSTITUTE_ALLOW</description>
        <inlineHelpText>ACCT_SUBSTITUTE_ALLOW</inlineHelpText>
        <label>ACCT_SUBSTITUTE_ALLOW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_TECHDEPOT_ALLOWED_FLAG__c</fullName>
        <description>ACCT_TECHDEPOT_ALLOWED_FLAG</description>
        <inlineHelpText>ACCT_TECHDEPOT_ALLOWED_FLAG</inlineHelpText>
        <label>ACCT_TECHDEPOT_ALLOWED_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_KEY__c</fullName>
        <formula>if( len(OMAX_SHIP_TO_ADDR_ID__c)==7 || OMAX_SHIP_TO_ADDR_ID__c==&apos;&apos;, left(OMAX_ACCT_ID__c,7),
right(OMAX_SHIP_TO_ADDR_ID__c,len(OMAX_SHIP_TO_ADDR_ID__c)-7)
)</formula>
        <label>ADDRESS KEY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_CONTACT_FIRSTNAME__c</fullName>
        <description>AP_CT_AP_CONTACT_FIRSTNAME</description>
        <inlineHelpText>AP_CT_AP_CONTACT_FIRSTNAME</inlineHelpText>
        <label>AP_CT_AP_CONTACT_FIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_CONTACT_LASTNAME__c</fullName>
        <description>AP_CT_AP_CONTACT_LASTNAME</description>
        <inlineHelpText>AP_CT_AP_CONTACT_LASTNAME</inlineHelpText>
        <label>AP_CT_AP_CONTACT_LASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_CONTACT_ROLE__c</fullName>
        <description>AP_CT_AP_CONTACT_ROLE</description>
        <inlineHelpText>AP_CT_AP_CONTACT_ROLE</inlineHelpText>
        <label>AP_CT_AP_CONTACT_ROLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_EMAIL__c</fullName>
        <description>AP_CT_AP_EMAIL</description>
        <inlineHelpText>AP_CT_AP_EMAIL</inlineHelpText>
        <label>AP_CT_AP_EMAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_MOB_PHONE__c</fullName>
        <description>AP_CT_AP_MOB_PHONE</description>
        <inlineHelpText>AP_CT_AP_MOB_PHONE</inlineHelpText>
        <label>AP_CT_AP_MOB_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_ORACLE_PARTY_SITE_ID__c</fullName>
        <description>AP_CT_AP_ORACLE_PARTY_SITE_ID</description>
        <inlineHelpText>AP_CT_AP_ORACLE_PARTY_SITE_ID</inlineHelpText>
        <label>AP_CT_AP_ORACLE_PARTY_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_PRIMARY_FAX__c</fullName>
        <description>AP_CT_AP_PRIMARY_FAX</description>
        <inlineHelpText>AP_CT_AP_PRIMARY_FAX</inlineHelpText>
        <label>AP_CT_AP_PRIMARY_FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_PRIMARY_PHONE__c</fullName>
        <description>AP_CT_AP_PRIMARY_PHONE</description>
        <inlineHelpText>AP_CT_AP_PRIMARY_PHONE</inlineHelpText>
        <label>AP_CT_AP_PRIMARY_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_SALUTAION__c</fullName>
        <description>AP_CT_AP_SALUTAION</description>
        <inlineHelpText>AP_CT_AP_SALUTAION</inlineHelpText>
        <label>AP_CT_AP_SALUTAION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_AP_TITLE__c</fullName>
        <description>AP_CT_AP_TITLE</description>
        <inlineHelpText>AP_CT_AP_TITLE</inlineHelpText>
        <label>AP_CT_AP_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_SFDC_AP_CONTACT_ID__c</fullName>
        <description>AP_CT_SFDC_AP_CONTACT_ID</description>
        <inlineHelpText>AP_CT_SFDC_AP_CONTACT_ID</inlineHelpText>
        <label>AP_CT_SFDC_AP_CONTACT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CT_SFDC_AP_DEFAULT_SITE_ID__c</fullName>
        <description>AP_CT_SFDC_AP_DEFAULT_SITE_ID</description>
        <inlineHelpText>AP_CT_SFDC_AP_DEFAULT_SITE_ID</inlineHelpText>
        <label>AP_CT_SFDC_AP_DEFAULT_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUTO_BACK_FAXNUM_EMAIL_ADDR__c</fullName>
        <label>AUTO BACK FAX# OR EMAIL ADDR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUTO_BACK_FAX_EMAIL_FLAG__c</fullName>
        <label>AUTO BACK FAX/EMAIL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated_Date__c</fullName>
        <description>Because these records are recycled, the createddate will be meaningless.  This datetime compensates by record the date at which the record was last moved from recycling bin.</description>
        <inlineHelpText>Because these records are recycled, the createddate will be meaningless.  This datetime compensates by record the date at which the record was last moved from recycling bin.</inlineHelpText>
        <label>Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMT_COMMENT__c</fullName>
        <description>CMT_COMMENT</description>
        <inlineHelpText>CMT_COMMENT</inlineHelpText>
        <label>CMT_COMMENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_01_CONTRACT_DESCRIPTION_1__c</fullName>
        <description>CNTR_01_CONTRACT_DESCRIPTION_1</description>
        <inlineHelpText>CNTR_01_CONTRACT_DESCRIPTION_1</inlineHelpText>
        <label>CNTR_01_CONTRACT_DESCRIPTION_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_01_CONTRACT_ID_1__c</fullName>
        <description>CNTR_01_CONTRACT_ID_1</description>
        <inlineHelpText>CNTR_01_CONTRACT_ID_1</inlineHelpText>
        <label>CNTR_01_CONTRACT_ID_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_01_CONTRACT_PRIORITY_1__c</fullName>
        <description>CNTR_01_CONTRACT_PRIORITY_1</description>
        <inlineHelpText>CNTR_01_CONTRACT_PRIORITY_1</inlineHelpText>
        <label>CNTR_01_CONTRACT_PRIORITY_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_02_CONTRACT_DESCRIPTION_2__c</fullName>
        <description>CNTR_02_CONTRACT_DESCRIPTION_2</description>
        <inlineHelpText>CNTR_02_CONTRACT_DESCRIPTION_2</inlineHelpText>
        <label>CNTR_02_CONTRACT_DESCRIPTION_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_02_CONTRACT_ID_2__c</fullName>
        <description>CNTR_02_CONTRACT_ID_2</description>
        <inlineHelpText>CNTR_02_CONTRACT_ID_2</inlineHelpText>
        <label>CNTR_02_CONTRACT_ID_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_02_CONTRACT_PRIORITY_2__c</fullName>
        <description>CNTR_02_CONTRACT_PRIORITY_2</description>
        <inlineHelpText>CNTR_02_CONTRACT_PRIORITY_2</inlineHelpText>
        <label>CNTR_02_CONTRACT_PRIORITY_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_03_CONTRACT_DESCRIPTION_3__c</fullName>
        <description>CNTR_03_CONTRACT_DESCRIPTION_3</description>
        <inlineHelpText>CNTR_03_CONTRACT_DESCRIPTION_3</inlineHelpText>
        <label>CNTR_03_CONTRACT_DESCRIPTION_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_03_CONTRACT_ID_3__c</fullName>
        <description>CNTR_03_CONTRACT_ID_3</description>
        <inlineHelpText>CNTR_03_CONTRACT_ID_3</inlineHelpText>
        <label>CNTR_03_CONTRACT_ID_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTR_03_CONTRACT_PRIORITY_3__c</fullName>
        <description>CNTR_03_CONTRACT_PRIORITY_3</description>
        <inlineHelpText>CNTR_03_CONTRACT_PRIORITY_3</inlineHelpText>
        <label>CNTR_03_CONTRACT_PRIORITY_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTENT_SET_VALUE__c</fullName>
        <label>Content Set 2=PR 3=LP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_CONTACT_FIRSTNAME__c</fullName>
        <description>EBILL_CT_EBILL_1_CONTACT_FIRSTNAME</description>
        <inlineHelpText>EBILL_CT_EBILL_1_CONTACT_FIRSTNAME</inlineHelpText>
        <label>EBILL_CT_EBILL_1_CONTACT_FIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_CONTACT_LASTNAME__c</fullName>
        <description>EBILL_CT_EBILL_1_CONTACT_LASTNAME</description>
        <inlineHelpText>EBILL_CT_EBILL_1_CONTACT_LASTNAME</inlineHelpText>
        <label>EBILL_CT_EBILL_1_CONTACT_LASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_CONTACT_ROLE__c</fullName>
        <description>EBILL_CT_EBILL_1_CONTACT_ROLE</description>
        <inlineHelpText>EBILL_CT_EBILL_1_CONTACT_ROLE</inlineHelpText>
        <label>EBILL_CT_EBILL_1_CONTACT_ROLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_EMAIL__c</fullName>
        <description>EBILL_CT_EBILL_1_EMAIL</description>
        <inlineHelpText>EBILL_CT_EBILL_1_EMAIL</inlineHelpText>
        <label>EBILL_CT_EBILL_1_EMAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_MOB_PHONE__c</fullName>
        <description>EBILL_CT_EBILL_1_MOB_PHONE</description>
        <inlineHelpText>EBILL_CT_EBILL_1_MOB_PHONE</inlineHelpText>
        <label>EBILL_CT_EBILL_1_MOB_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_ORACLE_PARTY_SITE_ID__c</fullName>
        <description>EBILL_CT_EBILL_1_ORACLE_PARTY_SITE_ID</description>
        <inlineHelpText>EBILL_CT_EBILL_1_ORACLE_PARTY_SITE_ID</inlineHelpText>
        <label>EBILL_CT_EBILL_1_ORACLE_PARTY_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_PRIMARY_FAX__c</fullName>
        <description>EBILL_CT_EBILL_1_PRIMARY_FAX</description>
        <inlineHelpText>EBILL_CT_EBILL_1_PRIMARY_FAX</inlineHelpText>
        <label>EBILL_CT_EBILL_1_PRIMARY_FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_PRIMARY_PHONE__c</fullName>
        <description>EBILL_CT_EBILL_1_PRIMARY_PHONE</description>
        <inlineHelpText>EBILL_CT_EBILL_1_PRIMARY_PHONE</inlineHelpText>
        <label>EBILL_CT_EBILL_1_PRIMARY_PHONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_SALUTAION__c</fullName>
        <description>EBILL_CT_EBILL_1_SALUTAION</description>
        <inlineHelpText>EBILL_CT_EBILL_1_SALUTAION</inlineHelpText>
        <label>EBILL_CT_EBILL_1_SALUTAION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_1_TITLE__c</fullName>
        <description>EBILL_CT_EBILL_1_TITLE</description>
        <inlineHelpText>EBILL_CT_EBILL_1_TITLE</inlineHelpText>
        <label>EBILL_CT_EBILL_1_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_CONTACT_FIRSTNAME2__c</fullName>
        <label>EBILL_CT_EBILL_CONTACT_FIRSTNAME2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_CONTACT_FIRSTNAME__c</fullName>
        <description>EBILL_CT_EBILL_CONTACT_FIRSTNAME</description>
        <inlineHelpText>EBILL_CT_EBILL_CONTACT_FIRSTNAME</inlineHelpText>
        <label>EBILL_CT_EBILL_CONTACT_FIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_CONTACT_LASTNAME2__c</fullName>
        <label>EBILL_CT_EBILL_CONTACT_LASTNAME2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBILL_CT_EBILL_CONTACT_LASTNAME__c</fullName>
        <description>EBILL_CT_EBILL_CONTACT_LASTNAME</description>
        <inlineHelpText>EBILL_CT_EBILL_CONTACT_LASTNAME</inlineHelpText>
        <label>EBILL_CT_EBILL_CONTACT_LASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>